exercise-9/guestbook/guestbook-deployment.yaml
# Copyright 2017 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: guestbook-service
    visualize: "true"
  name: guestbook-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook-service
      serving: "true"
  template:
    metadata:
      labels:
        app: guestbook-service
        serving: "true"
        version: latest
        visualize: "true"
        layer: controller-plane
    spec:
      containers:
      - name: guestbook-service
        image: retroryan/guestbook-service-istio:java-1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
